changing name again

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&family=League+Spartan:wght@400;700;800&family=Rubik&display=swap" rel="stylesheet">
 
-    <title> GPTalk World </title>
+    <title> GPTalk </title>
   </head>
 
   <body>
